# interpolator-ai

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.opencode/agents/: api-tester.md  langgraph-helper.md  math-validator.md
.opencode/skills/pydantic-models/: SKILL.md
backend/: Dockerfile
backend/agent/: __init__.py  pipeline.py  prompts.py
backend/api/: __init__.py  main.py
backend/models/: __init__.py  interpolation.py
backend/src/: __init__.py  direct_interpolation.py  graph_polynomial.py  hermite_interpolation.py  lagrange_interpolation.py  newton_backward_interpolation.py  newton_forward_interpolation.py
backend/tests/: __init__.py  conftest.py  test_interpolation.py
backend/tools/: __init__.py  direct_interpolation.py  equation_solver.py  graph_polynomial.py  lagrange_interpolation.py  newton_backward_interpolation.py  newton_forward_interpolation.py
backend/utils/: __init__.py  equation_solver.py  general_util.py  hermite_interpolation_util.py  lagrange_interpolation_util.py  newton_interpolation_util.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Header.tsx  InputBar.tsx  MessageBubble.tsx  ResultCard.tsx
use_maybe/: doolitle_equation_solver.py  file.txt  gauss_equation_solver.py  gauss_seidel_sor_equation_solver.py
