[project]
name = "projekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.8",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.7",
    "langserve>=0.3.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
